Fixed spacing on middle text

--- a/index.css
+++ b/index.css
@@ -146,13 +146,13 @@ body {
 /* This is only for Navigation code */
 nav {
   text-align: center;
-  margin: 0 20;
+  margin-left: 10%;
   font-size: 1rem;
 }
 
 .button1 {
   display: inline-block;
-  margin-left: 4%;
+  margin: 4%;
   padding: 2%;
   border-radius: 10px;
   background-color: #ff764e;
@@ -162,7 +162,7 @@ nav {
 
 .button2 {
   display: inline-block;
-  margin-left: 4%;
+  margin: 4%;
   padding: 2%;
   background-color: #5ed3eb;
   color: white;
@@ -172,7 +172,7 @@ nav {
 
 .button3 {
   display: inline-block;
-  margin-left: 4%;
+  margin: 4%;
   padding: 2%;
   background-color: #ffcd69;
   color: white;
@@ -199,6 +199,7 @@ nav {
 .container div {
   width: 70%;
   display: inline-block;
+  padding-top: 3%;
 }
 
 .container h1 {
@@ -211,8 +212,9 @@ nav {
 }
 .container p {
   text-align: center;
-  letter-spacing: 1.3;
+  letter-spacing: 0.2em;
   font-size: 1rem;
+  padding-bottom: 3%;
 }
 
 /* Code for text under the header/pink background */
@@ -228,8 +230,8 @@ nav {
 }
 
 .spaceBetween {
-	padding: 1%;
-	margin-bottom: 1%;
+  padding: 1%;
+  margin-bottom: 1%;
 }
 
 /* These are sections for the RV and campfire icons for now */
@@ -239,10 +241,9 @@ nav {
   margin: 0 auto;
   text-align: center;
   font-size: 1rem;
-
 }
 .section2 p {
-	text-align: center;
+  text-align: center;
 }
 .section2 img {
   display: inline-block;
@@ -253,8 +254,8 @@ nav {
   margin: 0 auto;
 }
 .middleSection {
-	padding-left: 30%;
-padding-right: 30%;
+  padding-left: 30%;
+  padding-right: 30%;
 }
 span {
   font-weight: bold;
@@ -268,13 +269,11 @@ footer {
 }
 
 footer section {
-background-image:url("assets/footer_img.jpg");
-background-size:cover;
-background-position:center;
-background-attachment:fixed;
-height: 20vh;
-
-
+  background-image: url("assets/footer_img.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 20vh;
 }
 /*
 .bottomImg {
